crates/plotnik-lib/tests/02-parser/recovery_validation/branch_label_snake_case.txt
[My_branch: (a) Other: (b)]
==== diagnostics ====
error: branch labels must be PascalCase
 --> query.ptk:1:2
  |
1 | [My_branch: (a) Other: (b)]
  |  ^^^^^^^^^
  |
help: use `MyBranch`
  |
1 - [My_branch: (a) Other: (b)]
1 + [MyBranch: (a) Other: (b)]
  |
help: branch labels become variants of an enum in the output
